[package]
name = "sdd"
description = "Scalable lock-free memory reclaimer"
documentation = "https://docs.rs/sdd"
version = "1.0.1"
authors = ["wvwwvwwv <wvwwvwwv@me.com>"]
edition = "2021"
rust-version = "1.65.0"
readme = "README.md"
repository = "https://github.com/wvwwvwwv/scalable-delayed-dealloc/"
license = "Apache-2.0"
categories = ["concurrency", "data-structures", "memory-management"]
keywords = ["concurrent", "epoch", "garbage", "lock-free", "memory"]

[workspace]
members = [".", "examples"]

[dev-dependencies]
criterion = "0.5"
futures = "0.3"
loom = "0.7"
static_assertions = "1.1"
tokio = { version = "1.38", features = ["full"] }

[[bench]]
name = "ebr"
harness = false
