[package]
name = "sdd"
description = "Scalable lock-free delayed memory reclaimer"
documentation = "https://docs.rs/sdd"
version = "1.6.0"
authors = ["wvwwvwwv <wvwwvwwv@me.com>"]
edition = "2021"
rust-version = "1.65.0"
readme = "README.md"
repository = "https://github.com/wvwwvwwv/scalable-delayed-dealloc/"
license = "Apache-2.0"
categories = ["concurrency", "data-structures", "memory-management"]
keywords = ["concurrent", "epoch", "garbage", "lock-free", "memory"]

[workspace]
members = [".", "examples"]

[dev-dependencies]
criterion = "0.5"
futures = "0.3"
static_assertions = "1.1"
tokio = { version = "1.38", features = ["full"] }

[features]
sdd_loom = ["loom"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom_test)'] }

[target.'cfg(loom_test)'.dependencies]
loom = { version = "0.7", optional = true }

[[bench]]
name = "ebr"
harness = false
